Fri Jun 14 09:48:48 2013  Shugo Maeda  <shugo@ruby-lang.org>

	* NEWS: add notes for $SAFE.

	* doc/security.rdoc: remove the description of $SAFE=4.

Fri Jun 14 00:14:29 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigdivrem): Zero test condition simplified.

Thu Jun 13 23:43:11 2013  Zachary Scott  <zachary@zacharyscott.net>

	* ext/bigdecimal/*: improve documentation, nodoc samples with @mrkn

Thu Jun 13 23:02:14 2013  Kouhei Sutou  <kou@cozmixng.org>

	* lib/xmlrpc/client.rb (XMLRPC::Client#http): Add reader for raw
	  Net::HTTP. [ruby-core:55197] [Feature #8461]
	  Reported by Herwin Weststrate. Thanks!!!

Thu Jun 13 22:44:52 2013  Kouhei Sutou  <kou@cozmixng.org>

	* lib/xmlrpc/client.rb (XMLRPC::Client#parse_set_cookies): Support
	  multiple names in a response. [ruby-core:41711] [Bug #5774]
	  Reported by Roman Riha. Thanks!!!
	* test/xmlrpc/test_client.rb (XMLRPC::ClientTest#test_cookie_override):
	  Add a test of the above case.

Thu Jun 13 22:35:50 2013  Kouhei Sutou  <kou@cozmixng.org>

	* lib/xmlrpc/client.rb (XMLRPC::Client#parse_set_cookies): Use
	  guard style.

Thu Jun 13 22:12:32 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/fileutils.rb (FileUtils#rmdir): fix traversal loop, not trying
	  remove same directory only.

Thu Jun 13 21:30:14 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (opt-dir), tool/ifchange: get rid of "alternate value"
	  expansion for legacy sh.  [ruby-dev:47420] [Bug #8524]

Thu Jun 13 21:24:09 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigdivrem): Refactored to use ALLOCV_N for temporary
	  buffers.

Thu Jun 13 18:54:11 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* bignum.c (integer_unpack_num_bdigits_generic): reorder terms (but not
	  changed the intention of the expression) because VC++ reports a
	  warning for it.  reported by ko1 via IRC.

Thu Jun 13 18:53:14 2013  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_thread.rb (test_thread_local_security): Don't create
	  an unused thread.
